--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "http-proxy-middleware": "^2.0.6",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
 }
