--- a/subscribe-services/auth-consumer-services/package.json
+++ b/subscribe-services/auth-consumer-services/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -15,6 +16,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
 }
