--- a/subscribe-services/auth-consumer-services/package.json
+++ b/subscribe-services/auth-consumer-services/package.json
@@ -15,6 +15,7 @@
     "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
