--- a/publish-services/auth-service/package.json
+++ b/publish-services/auth-service/package.json
@@ -14,6 +14,7 @@
     "amqplib": "^0.10.3",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "nodemon": "^3.0.2"
   }
