--- a/publish-services/auth-service/package.json
+++ b/publish-services/auth-service/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
     "nodemon": "^3.0.2"
   }
 }
