--- a/subscribe-services/auth-consumer-services/package.json
+++ b/subscribe-services/auth-consumer-services/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.10.3",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
