--- a/publish-services/auth-service/package.json
+++ b/publish-services/auth-service/package.json
@@ -14,6 +14,7 @@
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
